--- a/EscapeBox/templates/alertasHtml.html
+++ b/EscapeBox/templates/alertasHtml.html
@@ -1,14 +1,15 @@
 <div class = "list">
 	<div class="item" >    
-	<button class="btn btn-md btn-default" 
-	ng-click="imprimir(alertas[0])" >{{alertas[0].texto}}</button>
-	<button class="btn btn-md btn-default"
+	<button class="btn btn-sm btn-default"
 	ng-click="tocarObjetos()" >{{alertas[1].texto}}</button> 
-	<audio media-player="audioObjetos" data-playlist="playlist3">
+	<button class="btn btn-sm btn-default"
+	ng-click="tocarDerrota()" >Som final de derrota</button> 
+	<audio media-player="audioObjetos" data-playlist="playlistObjetos">
 	<source src="/sounds/objetos.mp3" type="audio/mp3">
 	</audio>
-	<!--/audio>
-	<button class="btn btn-md btn-default"
-	ng-click="playSound()" >Play</button--"> 
+	<audio media-player="audioDerrota" data-playlist="playDerrota">
+	<source src="/sounds/derrota.mp3" type="audio/mp3">
+	</audio>
+	</div>
 </div>
 
