--- a/EscapeBox/views/alcatraz.html
+++ b/EscapeBox/views/alcatraz.html
@@ -1,6 +1,14 @@
-<div id="diviniciar">
-<button class= "btiniciar" type="button" ng-click = "startJogo()">Iniciar</button>
-<button class= "btresetar" type="button" ng-click = "resetarJogo()">Recomeçar</button>
+<div id="diviniciar" ng-init="aguardando = true;preparar = false;iniciar = false;resetar = false">
+<label ng-show = "aguardando"> Aguardando Controlador</label>
+<button class= "btiniciar" type="button" ng-show = "preparar" ng-click = "prepararJogo();preparar = false;iniciar = true">Preparar</button>
+<button class= "btiniciar" type="button" ng-show = "iniciar" ng-click = "startJogo();iniciar = false;resetar = true">Iniciar</button>
+<audio media-player="audioAmbiente" data-playlist="playlist4">
+  <source src="/sounds/ambiente.mp3" type="audio/mp3">
+  </audio>
+  <audio media-player="audioNada" data-playlist="playlistNada">
+  <source src="/sounds/nada.mp3" type="audio/mp3">
+  </audio>
+<button class= "btresetar"  ng-show = "resetar" type="button" ng-click = "resetarJogo();preparar = true;resetar = false">Recomeçar</button>
 </div>
 <div id = "clockdiv">
   <div>
@@ -12,25 +20,22 @@
   </div>
 </div>
 <div>
-  <center><h2>Efeitos</h2></center>
+  <center><h3>Efeitos</h3></center>
   <efeitos></efeitos>
 </div>
 <div>
-  <center><h2>Dicas</h2></center>
+  <center><h3>Dicas</h3></center>
   <dicas></dicas>
 </div>
 <div>
-  <center><h2>Alertas</h2></center>
+  <center><h3>Alertas</h3></center>
   <alertas></alertas>
 </div>
 <div>
-  <center><h2>Acionamentos</h2></center> 
+  <center><h3>Acionamentos</h3></center> 
   <acio></acio>
 </div>
 </br></br>
-<p align="center">
- {{message }}
-</p>
 
 
 
