--- a/EscapeBox/styles/main.css
+++ b/EscapeBox/styles/main.css
@@ -28,6 +28,7 @@ margin-bottom: 10px;
 }
 .list .item button {
 margin-left: 20px;
+margin-bottom: 10px;
 cursor: pointer;
 } 
 .list .item2 label {
