--- a/EscapeBox/templates/efeitosSonorosHtml.html
+++ b/EscapeBox/templates/efeitosSonorosHtml.html
@@ -6,6 +6,8 @@
 	ng-click="tocarDisjuntor()" >{{efeitos[1].texto}}</button> 
 	<button class="btn btn-sm btn-default"
 	ng-click="tocarSirene()" >{{efeitos[2].texto}}</button> 
+	<button class="btn btn-sm btn-default"
+	ng-click="tocarTelefone()" >{{efeitos[3].texto}}</button> 
 
 	<audio media-player="audioDescarga" data-playlist="playlistDescarga">
 	<source src="/sounds/descarga.mp3" type="audio/mp3">
