--- a/EscapeBox/templates/alertasHtml.html
+++ b/EscapeBox/templates/alertasHtml.html
@@ -3,13 +3,14 @@
 	<button class="btn btn-sm btn-default"
 	ng-click="tocarObjetos()" >{{alertas[1].texto}}</button> 
 	<button class="btn btn-sm btn-default"
-	ng-click="tocarDerrota()" >Som final de derrota</button> 
+	ng-click="tocarGarrafas()" >{{alertas[0].texto}}</button> 
 	<audio media-player="audioObjetos" data-playlist="playlistObjetos">
 	<source src="/sounds/objetos.mp3" type="audio/mp3">
 	</audio>
-	<audio media-player="audioDerrota" data-playlist="playDerrota">
-	<source src="/sounds/derrota.mp3" type="audio/mp3">
+	<audio media-player="audioGarrafas" data-playlist="playlistGarrafas">
+	<source src="/sounds/garrafas.mp3" type="audio/mp3">
 	</audio>
+	
 	</div>
 </div>
 
